# VideoWriter

./: CMakeLists.txt  README.md  build.sh  test.aac  test.pcm
demo/: demo.cpp
inc/: video_writer_core.h
src/: video_writer_core.cpp
